added the wallets chapter

--- a/book/wallets.html
+++ b/book/wallets.html
@@ -316,8 +316,9 @@ Losing access to the seed means losing access to all associated private keys.</p
 </tbody></table>
 </div>
 <h2 id="extended-private-keysxprv-and-extended-public-keys-xpub"><a class="header" href="#extended-private-keysxprv-and-extended-public-keys-xpub">Extended private keys(xprv) and Extended public keys (xpub)</a></h2>
-<p>xprv- parent private key + parent chaincode
-xpub- parent public key + parent chain code. This can only create public keys. It is perfect for watch only wallets.</p>
+<p>xprv- parent private key + parent chaincode</p>
+<p>xpub- parent public key + parent chain code. This can only create public keys.</p>
+<p>It is perfect for watch only wallets.</p>
 
                     </main>
 
